# leap_labs_task

./: README.md  pyproject.toml
leap_labs_task/: main.py
tests/: test_main.py
